# MinimalRustKernel

./: Cargo.toml  README.md  boot.sh
src/: lib.rs  main.rs
src/serial/: mod.rs
src/vga_buffer/: buffer.rs  color_code.rs  mod.rs  screen_char.rs  test.rs  writer.rs
